// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileAppConnection it shows a QR code if the app isn't already connected 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-i7txp7"
  >
    <div
      class="container"
    >
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-1yjvs5a"
        >
          Loading...
           
          <div
            class="css-1baulvz"
            data-testid="Spinner"
          />
        </div>
      </div>
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-hpy5m7"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-77ouhj--strong css-66w5es"
          >
            Download
          </span>
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
          >
            The Grafana OnCall app is available on both the App Store and Google Play Store.
          </span>
          <div
            class="css-i7txp7"
          >
            <a
              href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  iOS
                </span>
              </div>
            </a>
            <a
              href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  Android
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently disconnecting 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-i7txp7"
  >
    <div
      class="container"
    >
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-1yjvs5a"
        >
          Loading...
           
          <div
            class="css-1baulvz"
            data-testid="Spinner"
          />
        </div>
      </div>
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-hpy5m7"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-77ouhj--strong css-66w5es"
          >
            Download
          </span>
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
          >
            The Grafana OnCall app is available on both the App Store and Google Play Store.
          </span>
          <div
            class="css-i7txp7"
          >
            <a
              href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  iOS
                </span>
              </div>
            </a>
            <a
              href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  Android
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently fetching the QR code 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-i7txp7"
  >
    <div
      class="container"
    >
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-1yjvs5a"
        >
          Loading...
           
          <div
            class="css-1baulvz"
            data-testid="Spinner"
          />
        </div>
      </div>
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-hpy5m7"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-77ouhj--strong css-66w5es"
          >
            Download
          </span>
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
          >
            The Grafana OnCall app is available on both the App Store and Google Play Store.
          </span>
          <div
            class="css-i7txp7"
          >
            <a
              href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  iOS
                </span>
              </div>
            </a>
            <a
              href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  Android
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a warning when cloud is not connected 1`] = `
<div>
  <div
    class="css-hpy5m7"
  >
    <span
      class="css-77ouhj--secondary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
    >
      Please connect Grafana Cloud OnCall to use the mobile app
    </span>
    <a
      class="css-1xyvdh3"
      href="/a/grafana-irm-app/cloud"
    >
      <button
        aria-disabled="false"
        class="css-8b29hm-button"
        type="button"
      >
        <span
          class="css-1riaxdn"
        >
          Connect Grafana Cloud OnCall
        </span>
      </button>
    </a>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error disconnecting the mobile app 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-i7txp7"
  >
    <div
      class="container"
    >
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <span
          class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
        >
          There was an error disconnecting your mobile app. Please try again.
        </span>
      </div>
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-hpy5m7"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-77ouhj--strong css-66w5es"
          >
            Download
          </span>
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
          >
            The Grafana OnCall app is available on both the App Store and Google Play Store.
          </span>
          <div
            class="css-i7txp7"
          >
            <a
              href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  iOS
                </span>
              </div>
            </a>
            <a
              href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  Android
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error fetching the QR code 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-i7txp7"
  >
    <div
      class="container"
    >
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <span
          class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
        >
          There was an error fetching your QR code. Please try again.
        </span>
      </div>
      <div
        class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
      >
        <div
          class="css-hpy5m7"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-77ouhj--strong css-66w5es"
          >
            Download
          </span>
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline css-66w5es"
          >
            The Grafana OnCall app is available on both the App Store and Google Play Store.
          </span>
          <div
            class="css-i7txp7"
          >
            <a
              href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  iOS
                </span>
              </div>
            </a>
            <a
              href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
              rel="noreferrer"
              style="width: 100%;"
              target="_blank"
            >
              <div
                class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="css-77ouhj--primary css-77ouhj--medium css-1rchs6o--inline icon-text css-66w5es"
                >
                  Android
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
